--- a/style.css
+++ b/style.css
@@ -9,7 +9,13 @@ body {
   }
   
   /* header */
-  
+  .title_header{
+    position: absolute;
+    margin-top: 25px;
+    font-family: Helvetica, sans-serif;
+    font-weight: bold;
+  }
+
   .header {
     background-color: #fff;
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
@@ -28,7 +34,8 @@ body {
   
   .header li a {
     display: block;
-    padding: 20px 20px;
+    padding: 26px 20px;
+    font-weight: bold;
     border-right: 1px solid #f4f4f4;
     text-decoration: none;
   }
@@ -47,7 +54,9 @@ body {
   }
   
   /* menu */
-  
+  .title_header{
+  }
+
   .header .menu {
     clear: both;
     max-height: 0;
@@ -100,7 +109,7 @@ body {
   }
   
   .header .menu-btn:checked ~ .menu {
-    max-height: 240px;
+    max-height: 280px;
   }
   
   .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -119,7 +128,145 @@ body {
   .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
     top: 0;
   }
+
+  .container_layout{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 350px;
+    background-image: url("img/bg-opacity-dark.png");
+    background-size: cover;
+    background-position: center;
+  }
+
+  .main_title, .sub_title{
+    font-family: Helvetica, sans-serif;
+    color: #fff;
+  }
   
+  .main_title{
+    font-size: 30px;
+    font-weight: bold;
+  }
+  
+  .sub_title{
+    font-style: italic;
+  }
+
+  .container_home{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .container_events, .container_news{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .event, .news{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    width: 600px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #fff;
+    background-color: #000;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 5px 5px 5px 5px;
+    border-radius: 3px;
+  }
+
+  .content_event{
+    display: flex;
+    justify-content: center;
+  }
+
+  .content_new{
+    display: flex;
+    flex-direction: row;
+    margin-left: 140px;
+    margin-bottom: 30px;
+    cursor: pointer;
+    background-color: khaki;
+    width: 580px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 15px;
+    border-radius: 5px;
+  }
+
+  .first_row{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .img_news{
+    margin-right: 25px;
+  }
+
+  .second_row{
+    display: flex;
+    flex-direction: row;
+    font-style: italic;
+  }
+
+  .title_news{
+    font-size: 20px;
+    margin-bottom: 5px;
+    font-family: Impact;
+  }
+
+  .date_news{
+    margin-right: 10px;
+  }
+
+  .description_news{
+    margin-right: 10px;
+  }
+
+  .next a{
+    color: #1a0dab;
+  }
+  
+  footer{
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+  }
+
+  .footer_bot{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text_footer{
+    font-family: impact;
+    color: #fff;
+    font-size: 20px;
+    margin-right: 15px;
+  }
+
+  .icon_footer{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .icon_footer img{
+    margin-right: 20px;
+    cursor: pointer;
+  }
   /* 48em = 768px */
   
   @media (min-width: 48em) {
@@ -127,7 +274,7 @@ body {
       float: left;
     }
     .header li a {
-      padding: 20px 30px;
+      padding: 26px 30px;
     }
     .header .menu {
       clear: none;
