--- a/style.css
+++ b/style.css
@@ -366,3 +366,21 @@ margin-bottom: 20px;}
   from {opacity: 0} 
   to {opacity: 1}
 }
+
+.container_infoclub{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.section_img{
+  margin-right: 20px;
+}
+
+.section_text{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
